--- a/pdf_print/templates/pdf_print/pic.html
+++ b/pdf_print/templates/pdf_print/pic.html
@@ -2,53 +2,97 @@
 
 
 {% block addhead %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 {% endblock %}
 
 
 {% block innercover %}
-<canvas id="myChart" width="400" height="400"></canvas>
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
 {% endblock %}
 
 
+
 {% block addfoot %}
-<script>
-var ctx = document.getElementById("myChart").getContext('2d');
-var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-            label: '# of Votes',
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255,99,132,1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
-                }
-            }]
-        }
-    }
-});
-</script>
+<script type="text/javascript">
+window.onload = function () {
+	var chart = new CanvasJS.Chart("chartContainer",{
+		title: {
+			text: "Try Dragging DataPoints to Reposition them"
+		},
+		axisX:{
+			minimum: 5,
+			maximum: 95
+		},
+		data: [
+		{
+			type: "spline",
+			cursor: "move",
+			dataPoints: [
+				{ x: 10, y: 71 },
+				{ x: 20, y: 55 },
+				{ x: 30, y: 50 },
+				{ x: 40, y: 65 },
+				{ x: 50, y: 95 },
+				{ x: 60, y: 68 },
+				{ x: 70, y: 28 },
+				{ x: 80, y: 34 },
+				{ x: 90, y: 14 }
+			]
+		}					
+		]
+	});
+
+	chart.render();
+	var record = false;
+	var precisionLevel = 1;
+	var xValue, yValue, parentOffset, relX, relY;
+	var selected;
+	var timerId = null;
+	jQuery(".canvasjs-chart-canvas").last().on({
+		mousedown: function(e) {
+			parentOffset = $(this).parent().offset();
+			relX = e.pageX - parentOffset.left;
+			relY = e.pageY - parentOffset.top;
+			xValue = Math.round(chart.axisX[0].convertPixelToValue(relX));
+			yValue = Math.round(chart.axisY[0].convertPixelToValue(relY));
+			var dps = chart.data[0].dataPoints;
+			for(var i = 0; i < dps.length; i++ ) {
+				if((xValue >= dps[i].x - precisionLevel && xValue <= dps[i].x + precisionLevel) && (yValue >= dps[i].y - precisionLevel && yValue <= dps[i].y + precisionLevel) ) {
+					record = true;
+					selected = i;
+					break;
+				} else {
+					selected = null;
+					continue;
+				}
+			}
+		},
+		mousemove: function(e) {
+			if(record ==  true) {
+				parentOffset = $(this).parent().offset();
+				relX = e.pageX - parentOffset.left;
+				relY = e.pageY - parentOffset.top;
+				xValue = Math.round(chart.axisX[0].convertPixelToValue(relX));
+				yValue = Math.round(chart.axisY[0].convertPixelToValue(relY));
+				clearTimeout(timerId);
+				timerId = setTimeout(function(){
+				if(selected != null) {
+					chart.data[0].dataPoints[selected].x = xValue;
+					chart.data[0].dataPoints[selected].y = yValue;
+					chart.render();
+				}	
+				}, 0);
+			}
+		},
+		mouseup: function(e) {
+			if(selected != null) {
+				chart.data[0].dataPoints[selected].x = xValue;
+				chart.data[0].dataPoints[selected].y = yValue;
+				chart.render();
+				record = false;
+			}
+		}
+	});
+}
+</script>    
 {% endblock %}
