--- a/pdf_print/templates/pdf_print/pic.html
+++ b/pdf_print/templates/pdf_print/pic.html
@@ -14,12 +14,18 @@
 
 {% block addfoot %}
 <script>
-var trace1 = {
-  x: {{ x }}, 
-  y: {{ y }}, 
-  type: 'scatter'
-};
-var data = [trace1];
+
+var data = [];
+{% for planet in planet_list %}
+    var {{ planet.name }} = {
+      x: {{ planet.x_as_plotly }}, 
+      y: {{ planet.y_as_plotly }}, 
+      type: 'scatter',
+      name: '{{ planet.name }}'
+    };
+    data.push({{ planet.name }})
+{% endfor %}
+
 Plotly.newPlot('myDiv', data);
 </script>
 {% endblock %}
