--- a/pdf_print/templates/pdf_print/base.html
+++ b/pdf_print/templates/pdf_print/base.html
@@ -45,6 +45,10 @@
             <p class="lead">
               <a href="/solar/pic_output" class="btn btn-lg btn-secondary">Spin it!</a>
             </p>
+<div class="container">
+     <h3>Animated button</h3>
+	<button class="btn btn-lg btn-warning"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Loading...</button>
+</div>
         {% endblock %}
           </div>
 
