--- a/pdf_print/static/cover.css
+++ b/pdf_print/static/cover.css
@@ -42,11 +42,15 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+    background-image: url("/static/Trans_CMB_dsat.png") ; 
+  background-repeat: no-repeat;
+  background-position: center;
+
 }
+
 .site-wrapper-inner {
   display: table-cell;
+  width: 100%;
   vertical-align: top;
 }
 .cover-container {
@@ -66,6 +70,9 @@ body {
 
 .masthead {
   margin-bottom: 2rem;
+  background-color: #333;
+    opacity: 0.8;
+
 }
 
 .masthead-brand {
@@ -122,7 +129,9 @@ body {
  */
 
 .mastfoot {
-  color: rgba(255,255,255,.5);
+  margin-bottom: 0rem;
+  background-color: #333;
+    opacity: 0.8;
 }
 
 
@@ -156,6 +165,6 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 42rem;
+    width: 70%;
   }
 }
