--- a/pdf_print/templates/pdf_print/base.html
+++ b/pdf_print/templates/pdf_print/base.html
@@ -21,7 +21,6 @@
   <body>
 
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
 
         <div class="cover-container">
@@ -30,7 +29,7 @@
             <div class="inner">
               <h3 class="masthead-brand">Solar</h3>
               <nav class="nav nav-masthead">
-                <a class="nav-link active" href="#">Picture Output</a>
+                <a class="nav-link active" href="{% url "cover" %} ">Static</a>
                 <a class="nav-link" href="#">Animation</a>
                 <a class="nav-link" href="#">Machine Learning</a>
               </nav>
@@ -38,19 +37,51 @@
           </div>
 
 
-          <div class="inner cover">
+          <div class="inner cover" style="color:#333">
             {% block innercover %}
-            <h1 class="cover-heading">Welcome to Solar</h1>
-            <p class="lead"></p>
-            <p class="lead">
-              <a href="/solar/pic_output" class="btn btn-lg btn-secondary">Spin it!</a>
-            </p>
+
+<div class="row">
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href={% url "pic_output" %}><img class="card-img-top" src={% static "static_teaser.png" %}></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href={% url "pic_output" %} style="color:#333">Project Static</a>
+              </h4>
+              <p class="card-text">This first project will simulate a garvitational N-body problem such as our solar system and provide ad static output as a 2D or 3D graph.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#"  style="color:#333">Project Animation</a>
+              </h4>
+              <p class="card-text">Extending Project Static, this project will output a (hopefully) beatifully rendered version of the static output (e.g. planets flying around).</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#" style="color:#333">Project Machine Leaning </a>
+              </h4>
+              <p class="card-text">The final stage of the project will aim to find alternative planet orbits yielding at least one habitable planet (according to parameters defined by the model, such as temperature etc) using machine learning. </p>
+            </div>
+          </div>
+        </div>
+      </div>
         {% endblock %}
           </div>
 
           <div class="mastfoot">
             <div class="inner">
               <p>See <a href="https://github.com/cknaut/Solar">Github</a> for more info</p>
+
             </div>
           </div>
 
