Added input website

--- a/pdf_print/static/cover.css
+++ b/pdf_print/static/cover.css
@@ -45,6 +45,7 @@ body {
     background-image: url("/static/Trans_CMB_dsat.png") ; 
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 
 }
 
