--- a/pdf_print/templates/pdf_print/pic.html
+++ b/pdf_print/templates/pdf_print/pic.html
@@ -8,7 +8,22 @@
 
 
 {% block innercover %}
+<div class="inner cover" style="color:#333">
 <div id="myDiv">
+</div>
+{% endblock %}
+
+{% block navbar %}
+  <div class="masthead clearfix">
+    <div class="inner">
+      <a href={% url "cover" %}> <h3 class="masthead-brand">Solar</h3></a>
+      <nav class="nav nav-masthead">
+        <a class="nav-link active " href={% url "static_input" %}">Static</a>
+        <a class="nav-link" href="#">Animation</a>
+        <a class="nav-link" href="#">Machine Learning</a>
+      </nav>
+    </div>
+  </div>
 {% endblock %}
 
 
