--- a/pdf_print/static/assets/cover.css
+++ b/pdf_print/static/assets/cover.css
@@ -42,7 +42,7 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-    background-image: url("/static/Trans_CMB_dsat.png") ; 
+    background-image: url("/static/images/Trans_CMB_dsat.png") ; 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
