--- a/pdf_print/templates/pdf_print/base.html
+++ b/pdf_print/templates/pdf_print/base.html
@@ -87,7 +87,7 @@
             <a href="#"><img class="card-img-top" src={% static "images/comingsoon.png" %} alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#" style="color:#333">Project Machine Leaning </a>
+                <a href="#" style="color:#333">Project Machine Learning </a>
               </h4>
               <p class="card-text">Constructing alternative planet orbits maximizing the habitability (as to be defined by the model) by performing genetic algorithm evolution.</p>
             <div class="alert alert-primary" role="alert">
