--- a/pdf_print/templates/pdf_print/base.html
+++ b/pdf_print/templates/pdf_print/base.html
@@ -64,7 +64,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container"  background-image: url("/static/images/Trans_CMB_dsat.png")>
      {% block container %}
       <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
