--- a/pdf_print/templates/pdf_print/base.html
+++ b/pdf_print/templates/pdf_print/base.html
@@ -13,6 +13,8 @@
 
 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
+{% block addheader %}
+{% endblock %}
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107204383-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -64,7 +66,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container"  background-image: url("/static/images/Trans_CMB_dsat.png")>
+    <div class="container">
      {% block container %}
       <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
