--- a/pdf_print/static/assets/heroic-features.css
+++ b/pdf_print/static/assets/heroic-features.css
@@ -6,7 +6,7 @@
 
 body {
     padding-top: 54px;
-    background-image: url("/static/images/Trans_CMB_dsat.png") ; 
+    background-image: url("/static/images/Trans_CMB_dsat.jpg") ; 
     background-repeat: no-repeat;
     background-position: center;
 }
